[workspace]
resolver = "2"
members = [
    "config",
    "error",
    "raws",
    "parsers",
    "show",
    "services/account",
    "services/dynamodb",
    "services/ebs",
    "services/ec2",
    "services/eks",
    "services/iam",
    "services/pricing",
    "services/sso",
    "services/sts",
]


[workspace.package]
version = "0.0.0-alpha.8"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awscli-rs/awscli"


[workspace.dependencies]
aws-smithy-types = { version = "0.57", features = [
    "serde-serialize",
    "serde-deserialize",
] }
aws-smithy-types-convert = { version = "0.57", features = ["convert-time"] }
async-trait = "0.1"
aws-config = "0.57"
aws-types = "0.57"
aws-sdk-account = "0.35"
aws-sdk-dynamodb = "0.35"
aws-sdk-ebs = "0.35"
aws-sdk-ec2 = "0.35"
aws-sdk-eks = "0.35"
aws-sdk-iam = "0.35"
aws-sdk-pricing = "0.35"
aws-sdk-sso = "0.35"
aws-sdk-sts = "0.35"
clap = { version = "4.2", features = ["derive", "env"] }
fmtools = "0.1"
miette = { version = "5.7", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["local-offset", "serde-well-known"] }
tokio = { version = "1.29", features = ["full"] }
thiserror = "1.0"

config = { version = "0.0.0-alpha.8", path = "./config" }
error = { version = "0.0.0-alpha.8", path = "./error" }
parsers = { version = "0.0.0-alpha.8", path = "./parsers" }
show = { version = "0.0.0-alpha.8", path = "./show" }

account = { version = "0.0.0-alpha.8", path = "./services/account" }
dynamodb = { version = "0.0.0-alpha.8", path = "./services/dynamodb" }
ebs = { version = "0.0.0-alpha.8", path = "./services/ebs" }
ec2 = { version = "0.0.0-alpha.8", path = "./services/ec2" }
eks = { version = "0.0.0-alpha.8", path = "./services/eks" }
iam = { version = "0.0.0-alpha.8", path = "./services/iam" }
pricing = { version = "0.0.0-alpha.8", path = "./services/pricing" }
sso = { version = "0.0.0-alpha.8", path = "./services/sso" }
sts = { version = "0.0.0-alpha.8", path = "./services/sts" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused = "warn"
warnings = "deny"
