[workspace]
resolver = "2"
members = [
    "config",
    "error",
    "raws",
    "parsers",
    "show",
    "services/account",
    "services/dynamodb",
    "services/ebs",
    "services/ec2",
    "services/eks",
    "services/iam",
    "services/pricing",
    "services/s3",
    "services/sso",
    "services/sts",
]


[workspace.package]
version = "0.0.4"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awscli-rs/awscli"
readme = "README.md"


[workspace.dependencies]
aws-smithy-types = { version = "1.1", features = [
    "serde-serialize",
    "serde-deserialize",
] }
aws-config = "1.1"
aws-types = "1.1"
aws-sdk-account = "1.1"
aws-sdk-dynamodb = "1.1"
aws-sdk-ebs = "1.1"
aws-sdk-ec2 = "1.1"
aws-sdk-eks = "1.1"
aws-sdk-iam = "1.1"
aws-sdk-pricing = "1.1"
aws-sdk-s3 = "1.1"
aws-sdk-sso = "1.1"
aws-sdk-sts = "1.1"

clap = { version = "4.2", features = ["derive", "env"] }
fmtools = "0.1"
itertools = "0.14"
miette = { version = "7.0", features = ["fancy"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["local-offset", "serde-well-known"] }
tokio = { version = "1.29", features = ["full"] }
thiserror = "2.0"

config = { version = "0.0.4", path = "./config", package = "raws-config" }
error = { version = "0.0.4", path = "./error", package = "raws-error" }
parsers = { version = "0.0.4", path = "./parsers", package = "raws-parsers" }
show = { version = "0.0.4", path = "./show", package = "raws-show" }

account = { version = "0.0.4", path = "./services/account", package = "raws-account" }
dynamodb = { version = "0.0.4", path = "./services/dynamodb", package = "raws-dynamodb" }
ebs = { version = "0.0.4", path = "./services/ebs", package = "raws-ebs" }
ec2 = { version = "0.0.4", path = "./services/ec2", package = "raws-ec2" }
eks = { version = "0.0.4", path = "./services/eks", package = "raws-eks" }
iam = { version = "0.0.4", path = "./services/iam", package = "raws-iam" }
pricing = { version = "0.0.4", path = "./services/pricing", package = "raws-pricing" }
s3 = { version = "0.0.4", path = "./services/s3", package = "raws-s3" }
sso = { version = "0.0.4", path = "./services/sso", package = "raws-sso" }
sts = { version = "0.0.4", path = "./services/sts", package = "raws-sts" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
large_futures = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
# non_exhaustive_omitted_patterns = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
warnings = "deny"
