[package]
name = "raws-config"
description = "RAWS config component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
aws-config.workspace = true
aws-types.workspace = true
aws-sdk-account.workspace = true

clap.workspace = true
fmtools.workspace = true
show.workspace = true


[lints]
workspace = true
