[package]
name = "raws-config"
description = "RAWS config component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
aws-config.workspace = true
aws-types.workspace = true
aws-sdk-account.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ebs.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-eks.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-pricing.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sso.workspace = true
aws-sdk-sts.workspace = true

clap.workspace = true
fmtools.workspace = true
show.workspace = true


[lints]
workspace = true
