[package]
name = "error"
description = "RAWS common error type"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
thiserror.workspace = true
miette.workspace = true

aws-smithy-types.workspace = true
aws-sdk-account.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-eks.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-sso.workspace = true
aws-sdk-sts.workspace = true


[lints]
workspace = true
