[package]
name = "raws-error"
description = "RAWS common error type"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
thiserror.workspace = true
miette.workspace = true

aws-smithy-types.workspace = true


[lints]
workspace = true
