[package]
name = "parsers"
description = "RAWS parsers"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
itertools = "0.10"

aws-sdk-dynamodb.workspace = true
aws-sdk-eks.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true


[lints]
workspace = true
