[package]
name = "parsers"
description = "RAWS parsers"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
itertools = "0.11"

aws-sdk-account.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ebs.workspace = true
aws-sdk-eks.workspace = true
aws-smithy-types.workspace = true
aws-smithy-types-convert.workspace = true
clap.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true


[lints]
workspace = true
