[package]
name = "raws-parsers"
description = "RAWS parsers"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
aws-sdk-account.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ebs.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-eks.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
clap.workspace = true
itertools.workspace = true
serde_json.workspace = true
thiserror.workspace = true


[lints]
workspace = true
