[package]
name = "raws"
description = "AWS CLI"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
# bytes = "1.4"
tokio = { version = "1.26", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
# uuid = { version = "1.3", features = ["serde"] }

clap.workspace = true
miette.workspace = true

config.workspace = true
account.workspace = true
dynamodb.workspace = true
eks.workspace = true
iam.workspace = true
sso.workspace = true
sts.workspace = true


[lints]
workspace = true
