[package]
name = "raws"
description = "RAWS - AWS CLI in Rust"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
# bytes = "1.4"
# tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
# uuid = { version = "1.3", features = ["serde"] }

clap.workspace = true
miette.workspace = true
tokio.workspace = true

config.workspace = true
account.workspace = true
dynamodb.workspace = true
ebs.workspace = true
ec2.workspace = true
eks.workspace = true
iam.workspace = true
pricing.workspace = true
s3.workspace = true
sso.workspace = true
sts.workspace = true


[lints]
workspace = true
