[package]
name = "show"
description = "RAWS show component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
fmtools = "0.1"

aws-sdk-dynamodb.workspace = true
aws-sdk-eks.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-sso.workspace = true
aws-sdk-sts.workspace = true
serde.workspace = true
serde_json.workspace = true


[lints]
workspace = true
