[package]
name = "show"
description = "RAWS show component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
aws-sdk-account.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ebs.workspace = true
aws-sdk-eks.workspace = true
aws-sdk-iam.workspace = true
aws-sdk-pricing.workspace = true
aws-sdk-sso.workspace = true
aws-sdk-sts.workspace = true
aws-smithy-types.workspace = true
aws-smithy-types-convert.workspace = true
fmtools.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true


[lints]
workspace = true
