[package]
name = "raws-account"
description = "RAWS Account component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
async-trait.workspace = true
aws-sdk-account.workspace = true
clap.workspace = true
thiserror.workspace = true

config.workspace = true
error.workspace = true
parsers.workspace = true
show.workspace = true


[lints]
workspace = true
