[package]
name = "raws-iam"
description = "RAWS IAM component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
async-trait.workspace = true
aws-sdk-iam.workspace = true
clap.workspace = true
thiserror.workspace = true

config.workspace = true
error.workspace = true
show.workspace = true


[lints]
workspace = true
