[package]
name = "raws-sso"
description = "RAWS SSO component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
aws-sdk-sso.workspace = true
clap.workspace = true

config.workspace = true
error.workspace = true
show.workspace = true


[lints]
workspace = true
