[package]
name = "raws-sts"
description = "RAWS STS component"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
async-trait.workspace = true
aws-sdk-sts.workspace = true
clap.workspace = true
thiserror.workspace = true

config.workspace = true
error.workspace = true
show.workspace = true
parsers.workspace = true


[lints]
workspace = true
